# AI_Chatbot

./: .gitignore  CMakeLists.txt  README.md  debug.txt  imgui.ini
chats/: chat_1773145678710.json  chat_1773146448279.json
include/: api_client.h  chat_storage.h  chatbot.h  conversation.h  file_reader.h  gui.h  markdown_parser.h
src/: api_client.cpp  chat_storage.cpp  chatbot.cpp  conversation.cpp  coversation.cpp  file_reader.cpp  gui.cpp  main.cpp  markdown_parser.cpp
tests/: text.txt
